@@ -2,6 +2,9 @@ $Id$
 
 OpenDNSSEC trunk
 
+* ods-ksmutil: update command split so that individual configuration files can
+  be updated separately.
+
 Bugfixes:
 * Signer Engine: Output better information if the HSM fails with the signing.
 
